[package]
name = "plasma2350-embassy-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-embedded-hal = { version = "0.3.0", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-98304","arch-cortex-m","executor-thread","executor-interrupt","defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt","defmt-timestamp-uptime"] }
embassy-rp = { version = "0.3.1", features = ["defmt","unstable-pac","time-driver","critical-section-impl","rp235xa","binary-info"] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"

panic-probe = { version = "0.3" }


[dev-dependencies]
smart-leds = "0.4.0"
